fix test classes